@@ -1,24 +1,39 @@
 package org.example.sharesportsbackend.global.config;
 
-import java.util.List;
+import java.util.Arrays;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
+import io.swagger.v3.oas.annotations.OpenAPIDefinition;
+import io.swagger.v3.oas.annotations.info.Info;
+import io.swagger.v3.oas.models.Components;
 import io.swagger.v3.oas.models.OpenAPI;
-import io.swagger.v3.oas.models.info.Info;
-import io.swagger.v3.oas.models.servers.Server;
+import io.swagger.v3.oas.models.security.SecurityRequirement;
+import io.swagger.v3.oas.models.security.SecurityScheme;
 
+@OpenAPIDefinition(
+	info = @Info(title = "Share Sports API 명세서",
+		description = "임시",
+		version = "v1"))
 @Configuration
 public class SwaggerConfig {
 
+	/**
+	 * http://localhost:8080/swagger-ui/index.html
+	 */
+
+	// JWT + swagger
 	@Bean
 	public OpenAPI openAPI() {
+		SecurityScheme securityScheme = new SecurityScheme()
+			.type(SecurityScheme.Type.HTTP).scheme("bearer").bearerFormat("JWT")
+			.in(SecurityScheme.In.HEADER).name("Authorization");
+		SecurityRequirement securityRequirement = new SecurityRequirement().addList("bearerAuth");
+
 		return new OpenAPI()
-			.info(new Info()
-				.title("API Test")
-				.description("share sports docs")
-				.version("1.0.0"))
-			.servers(List.of(new Server().url("/")));
+			.components(new Components().addSecuritySchemes("bearerAuth", securityScheme))
+			.security(Arrays.asList(securityRequirement));
 	}
+
 }
